# ChangeLog for sys-kernel/vanilla-sources
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.219 2006/08/12 18:47:35 kloeri Exp $

  12 Aug 2006; Bryan Østergaard <kloeri@gentoo.org>
  vanilla-sources-2.6.16.19.ebuild:
  Stable on alpha, used on 2006.1 installcd.

*vanilla-sources-2.6.17.8 (12 Aug 2006)

  12 Aug 2006; <plasmaroo@gentoo.org> +vanilla-sources-2.6.17.8.ebuild:
  Version bump (bug #142617).

*vanilla-sources-2.6.16.27 (12 Aug 2006)

  12 Aug 2006; Christian Heim <phreak@gentoo.org>
  +vanilla-sources-2.6.16.27.ebuild:
  Adding vanilla-sources-2.6.17.27.

  12 Aug 2006; Christian Heim <phreak@gentoo.org>
  -files/vanilla-sources-2.4.32-alpha-pci_iommu.patch,
  -vanilla-sources-2.4.32-r1.ebuild:
  Removing vanilla-sources-2.4.32-r1 as the patch (alpha-pci_iommu.patch) is
  included in 2.4.33.

*vanilla-sources-2.4.33 (11 Aug 2006)

  11 Aug 2006; Christian Heim <phreak@gentoo.org>
  +vanilla-sources-2.4.33.ebuild:
  Bumping vanilla-sources-2.4 to 2.4.33

*vanilla-sources-2.4.32-r1 (09 Aug 2006)

  09 Aug 2006; Christian Heim <phreak@gentoo.org>
  +files/vanilla-sources-2.4.32-alpha-pci_iommu.patch,
  +vanilla-sources-2.4.32-r1.ebuild:
  Revision bump. Fixing a compile issue on alpha (request of wolf31o2).

*vanilla-sources-2.6.18_rc4 (08 Aug 2006)

  08 Aug 2006; Christian Heim <phreak@gentoo.org>
  +vanilla-sources-2.6.18_rc4.ebuild:
  Version bump.

  06 Aug 2006; Simon Stelling <blubb@gentoo.org>
  vanilla-sources-2.6.16.19.ebuild:
  stable on amd64

  05 Aug 2006; Michael Hanselmann <hansmi@gentoo.org>
  vanilla-sources-2.6.17.7.ebuild:
  Stable on ppc.

  05 Aug 2006; Markus Rothe <corsair@gentoo.org>
  vanilla-sources-2.6.17.7.ebuild:
  Stable on ppc64

  03 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  vanilla-sources-2.6.16.26.ebuild, vanilla-sources-2.6.17.7.ebuild:
  Stable on sparc

*vanilla-sources-2.6.18_rc3 (30 Jul 2006)
