@@ -2,10 +2,10 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 
 <pkgmetadata>
-	<herd>x86-kernel</herd>
+	<herd>kernel</herd>
 	<maintainer>
-		<email>x86-kernel@gentoo.org</email>
-		<name>x86 kernel team</name>
+		<email>kernel@gentoo.org</email>
+		<name>kernel team</name>
 		<description>Actively maintained</description>
 	</maintainer>
 	<maintainer>
