@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/xbox-sources
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/xbox-sources/ChangeLog,v 1.43 2006/07/19 20:45:19 chrb Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/xbox-sources/ChangeLog,v 1.44 2006/08/18 11:06:55 phreak Exp $
+
+  18 Aug 2006; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Reassigning the package to kernel@g.o, the x86-kernel bugzilla-alias is
+  burried/dead.
 
 *xbox-sources-2.6.16.26 (19 Jul 2006)
 
