@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.219 2006/08/12 18:47:35 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.220 2006/08/18 11:03:46 phreak Exp $
+
+  18 Aug 2006; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Reassigning the package to kernel@g.o, the x86-kernel bugzilla-alias is
+  burried/dead.
 
   12 Aug 2006; Bryan Østergaard <kloeri@gentoo.org>
   vanilla-sources-2.6.16.19.ebuild:
